                0 bytes of the event were processed if the event was not complete.
  Sept 27,2006  Added code to support multiply incremented 2-d sum spectra.
  Oct. 03, 2006 Gui: Add preferences control panel with ~/.SpecTclDefaults
                save file.  Use this to default the length of 2-d spectrum
                axes.
  Oct 03, 2006 Gui: Prevent status lines from expanding in height.
  Oct 04, 2006 rwio package - added permissions letter to the cvs and
               to the distro.

  Oct 05, 2006 Xamine- add support for entering fitlines.
  Oct 09, 2006 GUI - Bugzilla 207 - Increase the sophistication used
               by SpecTcl's gui to located spectcldaq.
  Oct 10, 2006 - GUI - Bugzilla 208 - Enhancement request for File->Save...
               to support a selective store.
               - Filter processor Bugzilla 217 - Put a bit of code in the
               filter event processor to attempt to determine if it has
	       been pointed at something that is not a filter file.
               Seems to work for the cases I've tried, so it's 
 	       certainly better than it was before.
  Oct 16, 2006 - Bugzilla 219 : Added code to TclGrammerApp.cpp to output
	         the VERSION file to tkcon.
               - BZ 220 Allow user to disable prompt for 
                 new gui.  If NoPromptForNewGui is defined and true,
                 prompting will be disabled.
  Oct 19, 2006 - BZ 224 - 2d long integrations were incorrect on 64 bit plats.
               - BZ 226 - Added support for attach and eof callouts to
		 event processors.
               - Documented new functions in the event processors.
  Oct 20,2006  - BZ 87 Added basic fitting... still some kinks to work out
                 in the Xamine display but it does work...also need
                 to Xamine drive Gui to create the fit.
  Oct 23, 2006 - Added documentation for the fit command and how to 
                 extend the fitting subsystem.